# zinc

./: .gitignore  Makefile  README.md  ROADMAP.md  USER_GUIDE.md  example.zinc  pyproject.toml  zinc.todo
test/rust_source/: Cargo.toml  basic_dynamic_type.rs  functions.rs  if_else.rs  reassign_type.rs
test/rust_source/src/: arithmetic.rs  arrays.rs  basic_dynamic_type.rs  bounded_channels.rs  channels.rs  const_test.rs  for_loop.rs  functions.rs  if_else.rs  main.rs  monomorphization.rs  reassign_type.rs  spawn.rs  std_filesystem.rs  structs.rs  variable_assignment.rs
test/rust_source/src/annotations/: 01_typed_locals_and_params.rs  02_typed_shadowing_in_nested_scope.rs  03_exact_numeric_width_shadowing.rs  04_mixed_specialization_with_annotated_slot.rs  05_callable_exact_i64_success.rs  06_metadata_constraints.rs  07_type_alternatives.rs  08_rust_numeric_literals.rs
test/rust_source/src/callables/: 01_named_function.rs  02_lambda_array.rs  03_bound_method.rs  04_return_callable.rs  05_static_method.rs  06_generic_apply_multi_type.rs  07_rebinding_same_signature.rs  08_return_choice_same_signature.rs  09_typed_lambda_argument.rs  10_return_lambda.rs  11_bound_readonly_method.rs  12_imported_alias_function.rs  13_named_function_array.rs  14_channel_top_level_function.rs  15_channel_static_method.rs  16_channel_lambda.rs  17_channel_helper_param.rs  18_channel_spawn_helper.rs  19_channel_bounded.rs  20_channel_select_receive.rs  21_channel_same_signature_mix.rs  22_arrow_lambda.rs  23_arrow_lambda_edges.rs
test/rust_source/src/closures/: 01_lambda_capture_read.rs  02_lambda_super_assign.rs  03_nested_named_function_value.rs  04_independent_closure_envs.rs  05_sibling_closures_shared_cell.rs  06_generic_apply_capture.rs  07_channel_send_closure.rs  08_spawn_closure_value.rs  09_loop_fresh_capture.rs  10_select_received_closure.rs  11_nested_async_capture.rs  12_captured_array_mutation.rs  13_captured_struct_field_mutation.rs
test/rust_source/src/collections/: 01_dict_literal.rs  02_dict_empty_methods.rs  03_set_literal_methods.rs  04_set_empty_methods.rs  05_sorted_collections.rs  06_collection_parameters.rs  07_collection_returns.rs  08_mutator_return_value.rs
test/rust_source/src/decorators/: 01_stacked_and_generic.rs  02_factory_arguments.rs  03_constraints_and_annotations.rs  04_qualified_import.rs
test/rust_source/src/dynamic_typing/: 01_rapid_shadow_chain.rs  02_shadow_in_nested_scopes.rs  03_shadow_same_type_vs_different.rs  04_shadow_with_expression.rs  05_self_referential_shadow.rs  06_deep_promotion_chain.rs  07_unsupported_promotion.rs  08_boolean_in_arithmetic.rs  09_promotion_across_comparison.rs  10_mono_many_specializations.rs  11_mono_recursive_generic.rs  12_mono_mutual_recursion.rs  13_mono_unused_parameter.rs  14_empty_array_no_push.rs  15_array_mixed_literals.rs  16_array_shadow_element_type.rs  17_comparison_mixed_types.rs  18_logical_ops_on_non_bool.rs  19_type_through_function.rs  20_conditional_type_inference.rs
test/rust_source/src/enums/: 01_unit_match.rs  02_payload_match.rs  03_static_methods.rs  04_channel_flow.rs  05_imported_enum.rs
test/rust_source/src/error_handling/: 01_try_flow.rs  02_main_result.rs
test/rust_source/src/functions/: 01_named_defaults.rs  02_argument_spread.rs  03_argument_spread_edges.rs  04_ufcs.rs  05_ufcs_edge_cases.rs
test/rust_source/src/if_expressions/: 01_basic_assignment.rs  02_unit_no_else.rs  03_return_value.rs  04_else_if_chain.rs  05_break_continue.rs  06_both_branches_diverge.rs  07_mutator_unit_values.rs
test/rust_source/src/iterations/: 01_array_literal_values_reuse.rs  01_sortdict_keys_values.rs  02_array_empty_push_inference.rs  02_dict_bare_items_destructure.rs  03_dict_items_parenthesized.rs  03_set_unordered_sum_reuse.rs  04_dict_items_tuple_binding.rs  04_set_loop_locals_are_copies.rs  05_dict_loop_locals_are_copies.rs  05_dict_unordered_items_accumulate.rs  06_dict_keys_values_items_order_independent.rs  07_sort_set_ordered_values_reuse.rs  08_sort_set_loop_locals_are_copies.rs  09_sort_dict_keys_values_ordered.rs  10_sort_dict_items_destructure.rs  11_sort_dict_item_tuple_binding.rs  12_sort_dict_loop_locals_are_copies.rs  13_for_range_bounds.rs  14_nested_for_scopes_shadowing.rs  15_loop_var_reassignment.rs  16_while_counter_and_zero_guard.rs  17_break_continue.rs  18_loop_break.rs  19_return_from_for.rs  20_array_tuple_destructure.rs  21_return_from_tuple_for.rs  22_break_in_nested_for.rs
test/rust_source/src/metadata/: 01_symbol_meta.rs  02_type_meta.rs  03_constraints_and_orders.rs
test/rust_source/src/modules/: 01_bare_import.rs  02_alias_import.rs  03_selective_import.rs  04_same_name_aliases.rs  05_cross_module_monomorphization.rs
test/rust_source/src/monomorphization/: 01_deep_recursion_same_type.rs  02_recursion_type_change_attempt.rs  03_indirect_recursion_chain.rs  04_recursion_with_accumulator.rs  05_mutual_three_functions.rs  06_mutual_with_type_promotion.rs  07_mutual_different_return_types.rs  08_same_call_different_contexts.rs  09_nested_generic_calls.rs  10_generic_in_conditional.rs  11_call_with_expression_result.rs  12_multiple_return_statements.rs  13_return_in_nested_block.rs  14_return_function_call.rs  15_return_chain.rs  16_many_call_sites_same_types.rs  17_combinatorial_explosion.rs  18_specialization_not_called.rs  19_generic_with_arrays.rs  20_generic_with_channels.rs
test/rust_source/src/non_deterministic/: spawn.rs  spawn_channel_multi_sender.rs  spawn_completion.rs  spawn_helper_completion.rs  spawn_loop_completion.rs  spawn_nested_completion.rs  spawn_return_completion.rs
test/rust_source/src/operators/: 01_math_shorthand.rs  02_bitwise.rs  03_overloading.rs
test/rust_source/src/rust_interop/: 01_free_functions.rs  02_alias_import.rs  03_opaque_type_methods.rs  04_async_extern.rs
test/rust_source/src/strings/: 01_raw_multiline.rs
test/rust_source/src/structs/: 01_basic_fields.rs  02_private_fields.rs  03_const_fields.rs  04_static_methods.rs  05_instance_methods.rs  06_string_interpolation.rs  07_string_conversion.rs  08_integration.rs  (+12 more)
(+685 files in other folders)
