[package]
name = "zinc_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "arithmetic"
path = "src/arithmetic.rs"

[[bin]]
name = "arrays"
path = "src/arrays.rs"

[[bin]]
name = "basic_dynamic_type"
path = "src/basic_dynamic_type.rs"

[[bin]]
name = "callables_01_named_function"
path = "src/callables/01_named_function.rs"

[[bin]]
name = "callables_02_lambda_array"
path = "src/callables/02_lambda_array.rs"

[[bin]]
name = "callables_03_bound_method"
path = "src/callables/03_bound_method.rs"

[[bin]]
name = "callables_04_return_callable"
path = "src/callables/04_return_callable.rs"

[[bin]]
name = "callables_05_static_method"
path = "src/callables/05_static_method.rs"

[[bin]]
name = "callables_06_generic_apply_multi_type"
path = "src/callables/06_generic_apply_multi_type.rs"

[[bin]]
name = "callables_07_rebinding_same_signature"
path = "src/callables/07_rebinding_same_signature.rs"

[[bin]]
name = "callables_08_return_choice_same_signature"
path = "src/callables/08_return_choice_same_signature.rs"

[[bin]]
name = "callables_09_typed_lambda_argument"
path = "src/callables/09_typed_lambda_argument.rs"

[[bin]]
name = "callables_10_return_lambda"
path = "src/callables/10_return_lambda.rs"

[[bin]]
name = "callables_11_bound_readonly_method"
path = "src/callables/11_bound_readonly_method.rs"

[[bin]]
name = "callables_12_imported_alias_function"
path = "src/callables/12_imported_alias_function.rs"

[[bin]]
name = "callables_13_named_function_array"
path = "src/callables/13_named_function_array.rs"

[[bin]]
name = "callables_14_channel_top_level_function"
path = "src/callables/14_channel_top_level_function.rs"

[[bin]]
name = "callables_15_channel_static_method"
path = "src/callables/15_channel_static_method.rs"

[[bin]]
name = "callables_16_channel_lambda"
path = "src/callables/16_channel_lambda.rs"

[[bin]]
name = "callables_17_channel_helper_param"
path = "src/callables/17_channel_helper_param.rs"

[[bin]]
name = "callables_18_channel_spawn_helper"
path = "src/callables/18_channel_spawn_helper.rs"

[[bin]]
name = "callables_19_channel_bounded"
path = "src/callables/19_channel_bounded.rs"

[[bin]]
name = "callables_20_channel_select_receive"
path = "src/callables/20_channel_select_receive.rs"

[[bin]]
name = "callables_21_channel_same_signature_mix"
path = "src/callables/21_channel_same_signature_mix.rs"

[[bin]]
name = "collections_01_dict_literal"
path = "src/collections/01_dict_literal.rs"

[[bin]]
name = "collections_02_dict_empty_methods"
path = "src/collections/02_dict_empty_methods.rs"

[[bin]]
name = "collections_03_set_literal_methods"
path = "src/collections/03_set_literal_methods.rs"

[[bin]]
name = "collections_04_set_empty_methods"
path = "src/collections/04_set_empty_methods.rs"

[[bin]]
name = "collections_05_sorted_collections"
path = "src/collections/05_sorted_collections.rs"

[[bin]]
name = "collections_06_collection_parameters"
path = "src/collections/06_collection_parameters.rs"

[[bin]]
name = "collections_07_collection_returns"
path = "src/collections/07_collection_returns.rs"

[[bin]]
name = "concurrency_channels_01_local_round_trip"
path = "src/concurrency/channels/01_local_round_trip.rs"

[[bin]]
name = "concurrency_channels_02_spawn_parameter_round_trip"
path = "src/concurrency/channels/02_spawn_parameter_round_trip.rs"

[[bin]]
name = "concurrency_channels_03_bounded_fifo"
path = "src/concurrency/channels/03_bounded_fifo.rs"

[[bin]]
name = "concurrency_channels_04_bounded_send_unblocks"
path = "src/concurrency/channels/04_bounded_send_unblocks.rs"

[[bin]]
name = "concurrency_channels_05_close_drain"
path = "src/concurrency/channels/05_close_drain.rs"

[[bin]]
name = "concurrency_channels_06_param_receive_range"
path = "src/concurrency/channels/06_param_receive_range.rs"

[[bin]]
name = "concurrency_channels_07_param_receive_send"
path = "src/concurrency/channels/07_param_receive_send.rs"

[[bin]]
name = "concurrency_non_deterministic_01_spawn_print_race"
path = "src/concurrency/non_deterministic/01_spawn_print_race.rs"

[[bin]]
name = "concurrency_non_deterministic_02_spawn_completion_race"
path = "src/concurrency/non_deterministic/02_spawn_completion_race.rs"

[[bin]]
name = "concurrency_non_deterministic_03_spawn_helper_completion_race"
path = "src/concurrency/non_deterministic/03_spawn_helper_completion_race.rs"

[[bin]]
name = "concurrency_non_deterministic_04_spawn_loop_completion_race"
path = "src/concurrency/non_deterministic/04_spawn_loop_completion_race.rs"

[[bin]]
name = "concurrency_non_deterministic_05_spawn_nested_completion_race"
path = "src/concurrency/non_deterministic/05_spawn_nested_completion_race.rs"

[[bin]]
name = "concurrency_non_deterministic_06_spawn_return_completion_race"
path = "src/concurrency/non_deterministic/06_spawn_return_completion_race.rs"

[[bin]]
name = "concurrency_non_deterministic_07_channel_multi_sender_order"
path = "src/concurrency/non_deterministic/07_channel_multi_sender_order.rs"

[[bin]]
name = "concurrency_non_deterministic_08_select_multiple_ready_receives"
path = "src/concurrency/non_deterministic/08_select_multiple_ready_receives.rs"

[[bin]]
name = "concurrency_non_deterministic_09_bounded_backpressure_interleaving"
path = "src/concurrency/non_deterministic/09_bounded_backpressure_interleaving.rs"

[[bin]]
name = "concurrency_non_deterministic_10_patterns_fan_in_race"
path = "src/concurrency/non_deterministic/10_patterns_fan_in_race.rs"

[[bin]]
name = "concurrency_patterns_01_pipeline_linear"
path = "src/concurrency/patterns/01_pipeline_linear.rs"

[[bin]]
name = "concurrency_patterns_02_tee_broadcast"
path = "src/concurrency/patterns/02_tee_broadcast.rs"

[[bin]]
name = "concurrency_patterns_03_request_reply"
path = "src/concurrency/patterns/03_request_reply.rs"

[[bin]]
name = "concurrency_patterns_04_worker_pool_sum"
path = "src/concurrency/patterns/04_worker_pool_sum.rs"

[[bin]]
name = "concurrency_patterns_05_fan_in_coordinated"
path = "src/concurrency/patterns/05_fan_in_coordinated.rs"

[[bin]]
name = "concurrency_patterns_06_fan_out_coordinated"
path = "src/concurrency/patterns/06_fan_out_coordinated.rs"

[[bin]]
name = "concurrency_select_01_receive_preloaded"
path = "src/concurrency/select/01_receive_preloaded.rs"

[[bin]]
name = "concurrency_select_02_send_bounded_ready_choice"
path = "src/concurrency/select/02_send_bounded_ready_choice.rs"

[[bin]]
name = "concurrency_select_03_default_idle"
path = "src/concurrency/select/03_default_idle.rs"

[[bin]]
name = "concurrency_select_04_binding_shadow"
path = "src/concurrency/select/04_binding_shadow.rs"

[[bin]]
name = "concurrency_select_05_helper_async"
path = "src/concurrency/select/05_helper_async.rs"

[[bin]]
name = "concurrency_select_06_mixed_send_receive"
path = "src/concurrency/select/06_mixed_send_receive.rs"

[[bin]]
name = "concurrency_select_07_receive_closed_status"
path = "src/concurrency/select/07_receive_closed_status.rs"

[[bin]]
name = "concurrency_select_08_context_done"
path = "src/concurrency/select/08_context_done.rs"

[[bin]]
name = "concurrency_select_09_context_spawn_cancel"
path = "src/concurrency/select/09_context_spawn_cancel.rs"

[[bin]]
name = "concurrency_spawn_01_basic_ack"
path = "src/concurrency/spawn/01_basic_ack.rs"

[[bin]]
name = "concurrency_spawn_02_helper_waits_for_child"
path = "src/concurrency/spawn/02_helper_waits_for_child.rs"

[[bin]]
name = "concurrency_spawn_03_nested_spawn_chain"
path = "src/concurrency/spawn/03_nested_spawn_chain.rs"

[[bin]]
name = "concurrency_spawn_04_loop_collects_all"
path = "src/concurrency/spawn/04_loop_collects_all.rs"

[[bin]]
name = "const_test"
path = "src/const_test.rs"

[[bin]]
name = "dynamic_typing_01_rapid_shadow_chain"
path = "src/dynamic_typing/01_rapid_shadow_chain.rs"

[[bin]]
name = "dynamic_typing_02_shadow_in_nested_scopes"
path = "src/dynamic_typing/02_shadow_in_nested_scopes.rs"

[[bin]]
name = "dynamic_typing_03_shadow_same_type_vs_different"
path = "src/dynamic_typing/03_shadow_same_type_vs_different.rs"

[[bin]]
name = "dynamic_typing_04_shadow_with_expression"
path = "src/dynamic_typing/04_shadow_with_expression.rs"

[[bin]]
name = "dynamic_typing_05_self_referential_shadow"
path = "src/dynamic_typing/05_self_referential_shadow.rs"

[[bin]]
name = "dynamic_typing_06_deep_promotion_chain"
path = "src/dynamic_typing/06_deep_promotion_chain.rs"

[[bin]]
name = "dynamic_typing_07_unsupported_promotion"
path = "src/dynamic_typing/07_unsupported_promotion.rs"

[[bin]]
name = "dynamic_typing_08_boolean_in_arithmetic"
path = "src/dynamic_typing/08_boolean_in_arithmetic.rs"

[[bin]]
name = "dynamic_typing_09_promotion_across_comparison"
path = "src/dynamic_typing/09_promotion_across_comparison.rs"

[[bin]]
name = "dynamic_typing_10_mono_many_specializations"
path = "src/dynamic_typing/10_mono_many_specializations.rs"

[[bin]]
name = "dynamic_typing_11_mono_recursive_generic"
path = "src/dynamic_typing/11_mono_recursive_generic.rs"

[[bin]]
name = "dynamic_typing_12_mono_mutual_recursion"
path = "src/dynamic_typing/12_mono_mutual_recursion.rs"

[[bin]]
name = "dynamic_typing_13_mono_unused_parameter"
path = "src/dynamic_typing/13_mono_unused_parameter.rs"

[[bin]]
name = "dynamic_typing_14_empty_array_no_push"
path = "src/dynamic_typing/14_empty_array_no_push.rs"

[[bin]]
name = "dynamic_typing_15_array_mixed_literals"
path = "src/dynamic_typing/15_array_mixed_literals.rs"

[[bin]]
name = "dynamic_typing_16_array_shadow_element_type"
path = "src/dynamic_typing/16_array_shadow_element_type.rs"

[[bin]]
name = "dynamic_typing_17_comparison_mixed_types"
path = "src/dynamic_typing/17_comparison_mixed_types.rs"

[[bin]]
name = "dynamic_typing_18_logical_ops_on_non_bool"
path = "src/dynamic_typing/18_logical_ops_on_non_bool.rs"

[[bin]]
name = "dynamic_typing_19_type_through_function"
path = "src/dynamic_typing/19_type_through_function.rs"

[[bin]]
name = "dynamic_typing_20_conditional_type_inference"
path = "src/dynamic_typing/20_conditional_type_inference.rs"

[[bin]]
name = "for_loop"
path = "src/for_loop.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "if_else"
path = "src/if_else.rs"

[[bin]]
name = "iterations_01_array_literal_values_reuse"
path = "src/iterations/01_array_literal_values_reuse.rs"

[[bin]]
name = "iterations_02_array_empty_push_inference"
path = "src/iterations/02_array_empty_push_inference.rs"

[[bin]]
name = "iterations_03_set_unordered_sum_reuse"
path = "src/iterations/03_set_unordered_sum_reuse.rs"

[[bin]]
name = "iterations_04_set_loop_locals_are_copies"
path = "src/iterations/04_set_loop_locals_are_copies.rs"

[[bin]]
name = "iterations_05_dict_unordered_items_accumulate"
path = "src/iterations/05_dict_unordered_items_accumulate.rs"

[[bin]]
name = "iterations_06_dict_keys_values_items_order_independent"
path = "src/iterations/06_dict_keys_values_items_order_independent.rs"

[[bin]]
name = "iterations_07_sort_set_ordered_values_reuse"
path = "src/iterations/07_sort_set_ordered_values_reuse.rs"

[[bin]]
name = "iterations_08_sort_set_loop_locals_are_copies"
path = "src/iterations/08_sort_set_loop_locals_are_copies.rs"

[[bin]]
name = "iterations_09_sort_dict_keys_values_ordered"
path = "src/iterations/09_sort_dict_keys_values_ordered.rs"

[[bin]]
name = "iterations_10_sort_dict_items_destructure"
path = "src/iterations/10_sort_dict_items_destructure.rs"

[[bin]]
name = "iterations_11_sort_dict_item_tuple_binding"
path = "src/iterations/11_sort_dict_item_tuple_binding.rs"

[[bin]]
name = "iterations_12_sort_dict_loop_locals_are_copies"
path = "src/iterations/12_sort_dict_loop_locals_are_copies.rs"

[[bin]]
name = "iterations_13_for_range_bounds"
path = "src/iterations/13_for_range_bounds.rs"

[[bin]]
name = "iterations_14_nested_for_scopes_shadowing"
path = "src/iterations/14_nested_for_scopes_shadowing.rs"

[[bin]]
name = "iterations_15_loop_var_reassignment"
path = "src/iterations/15_loop_var_reassignment.rs"

[[bin]]
name = "iterations_16_while_counter_and_zero_guard"
path = "src/iterations/16_while_counter_and_zero_guard.rs"

[[bin]]
name = "iterations_17_break_continue"
path = "src/iterations/17_break_continue.rs"

[[bin]]
name = "iterations_18_loop_break"
path = "src/iterations/18_loop_break.rs"

[[bin]]
name = "iterations_19_return_from_for"
path = "src/iterations/19_return_from_for.rs"

[[bin]]
name = "iterations_20_array_tuple_destructure"
path = "src/iterations/20_array_tuple_destructure.rs"

[[bin]]
name = "iterations_21_return_from_tuple_for"
path = "src/iterations/21_return_from_tuple_for.rs"

[[bin]]
name = "iterations_22_break_in_nested_for"
path = "src/iterations/22_break_in_nested_for.rs"

[[bin]]
name = "modules_01_bare_import"
path = "src/modules/01_bare_import.rs"

[[bin]]
name = "modules_02_alias_import"
path = "src/modules/02_alias_import.rs"

[[bin]]
name = "modules_03_selective_import"
path = "src/modules/03_selective_import.rs"

[[bin]]
name = "modules_04_same_name_aliases"
path = "src/modules/04_same_name_aliases.rs"

[[bin]]
name = "modules_05_cross_module_monomorphization"
path = "src/modules/05_cross_module_monomorphization.rs"

[[bin]]
name = "monomorphization"
path = "src/monomorphization.rs"

[[bin]]
name = "monomorphization_01_deep_recursion_same_type"
path = "src/monomorphization/01_deep_recursion_same_type.rs"

[[bin]]
name = "monomorphization_02_recursion_type_change_attempt"
path = "src/monomorphization/02_recursion_type_change_attempt.rs"

[[bin]]
name = "monomorphization_03_indirect_recursion_chain"
path = "src/monomorphization/03_indirect_recursion_chain.rs"

[[bin]]
name = "monomorphization_04_recursion_with_accumulator"
path = "src/monomorphization/04_recursion_with_accumulator.rs"

[[bin]]
name = "monomorphization_05_mutual_three_functions"
path = "src/monomorphization/05_mutual_three_functions.rs"

[[bin]]
name = "monomorphization_06_mutual_with_type_promotion"
path = "src/monomorphization/06_mutual_with_type_promotion.rs"

[[bin]]
name = "monomorphization_07_mutual_different_return_types"
path = "src/monomorphization/07_mutual_different_return_types.rs"

[[bin]]
name = "monomorphization_08_same_call_different_contexts"
path = "src/monomorphization/08_same_call_different_contexts.rs"

[[bin]]
name = "monomorphization_09_nested_generic_calls"
path = "src/monomorphization/09_nested_generic_calls.rs"

[[bin]]
name = "monomorphization_10_generic_in_conditional"
path = "src/monomorphization/10_generic_in_conditional.rs"

[[bin]]
name = "monomorphization_11_call_with_expression_result"
path = "src/monomorphization/11_call_with_expression_result.rs"

[[bin]]
name = "monomorphization_12_multiple_return_statements"
path = "src/monomorphization/12_multiple_return_statements.rs"

[[bin]]
name = "monomorphization_13_return_in_nested_block"
path = "src/monomorphization/13_return_in_nested_block.rs"

[[bin]]
name = "monomorphization_14_return_function_call"
path = "src/monomorphization/14_return_function_call.rs"

[[bin]]
name = "monomorphization_15_return_chain"
path = "src/monomorphization/15_return_chain.rs"

[[bin]]
name = "monomorphization_16_many_call_sites_same_types"
path = "src/monomorphization/16_many_call_sites_same_types.rs"

[[bin]]
name = "monomorphization_17_combinatorial_explosion"
path = "src/monomorphization/17_combinatorial_explosion.rs"

[[bin]]
name = "monomorphization_18_specialization_not_called"
path = "src/monomorphization/18_specialization_not_called.rs"

[[bin]]
name = "monomorphization_19_generic_with_arrays"
path = "src/monomorphization/19_generic_with_arrays.rs"

[[bin]]
name = "monomorphization_20_generic_with_channels"
path = "src/monomorphization/20_generic_with_channels.rs"

[[bin]]
name = "reassign_type"
path = "src/reassign_type.rs"

[[bin]]
name = "structs_01_basic_fields"
path = "src/structs/01_basic_fields.rs"

[[bin]]
name = "structs_02_private_fields"
path = "src/structs/02_private_fields.rs"

[[bin]]
name = "structs_03_const_fields"
path = "src/structs/03_const_fields.rs"

[[bin]]
name = "structs_04_static_methods"
path = "src/structs/04_static_methods.rs"

[[bin]]
name = "structs_05_instance_methods"
path = "src/structs/05_instance_methods.rs"

[[bin]]
name = "structs_06_string_interpolation"
path = "src/structs/06_string_interpolation.rs"

[[bin]]
name = "structs_07_string_conversion"
path = "src/structs/07_string_conversion.rs"

[[bin]]
name = "structs_08_integration"
path = "src/structs/08_integration.rs"

[[bin]]
name = "structs_09_composition_orthogonal"
path = "src/structs/09_composition_orthogonal.rs"

[[bin]]
name = "structs_10_composition_merge_fields"
path = "src/structs/10_composition_merge_fields.rs"

[[bin]]
name = "structs_11_composition_static_methods"
path = "src/structs/11_composition_static_methods.rs"

[[bin]]
name = "structs_12_composition_imported"
path = "src/structs/12_composition_imported.rs"

[[bin]]
name = "structs_13_base_types"
path = "src/structs/13_base_types.rs"

[[bin]]
name = "structs_14_anon_basic_fields"
path = "src/structs/14_anon_basic_fields.rs"

[[bin]]
name = "structs_15_anon_function_param_return"
path = "src/structs/15_anon_function_param_return.rs"

[[bin]]
name = "structs_16_anon_nested_fields"
path = "src/structs/16_anon_nested_fields.rs"

[[bin]]
name = "structs_17_anon_array_tuple_channel"
path = "src/structs/17_anon_array_tuple_channel.rs"

[[bin]]
name = "structs_18_anon_named_struct_field"
path = "src/structs/18_anon_named_struct_field.rs"

[[bin]]
name = "tuples_01_literal_index"
path = "src/tuples/01_literal_index.rs"

[[bin]]
name = "tuples_02_single_vs_paren"
path = "src/tuples/02_single_vs_paren.rs"

[[bin]]
name = "tuples_03_destructuring"
path = "src/tuples/03_destructuring.rs"

[[bin]]
name = "tuples_04_function_arg"
path = "src/tuples/04_function_arg.rs"

[[bin]]
name = "tuples_05_function_return"
path = "src/tuples/05_function_return.rs"

[[bin]]
name = "tuples_06_nested_index"
path = "src/tuples/06_nested_index.rs"

[[bin]]
name = "variable_assignment"
path = "src/variable_assignment.rs"

[[bin]]
name = "run_all"
path = "src/main.rs"
